css/style.css
/*
*
* sticky footer
*
*/

html {
 	position: relative;
  min-height: 100%;
}

body {
	margin-bottom: 60px;
}

footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 60px;
}

/*
*
* navbar styles
*
*/

.navbar {
	font-family: 'Special Elite', cursive;
	background-color: white;
}

.navbar-default .navbar-brand {
	color: black;
}

.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
  color: black;
  background-color: #EFF0D1;
}

.navbar-default .navbar-nav>li>a {
  color: black;
}

.navbar-default .navbar-toggle .icon-bar {
  background-color: black;
}

.navbar-default .navbar-toggle {
	background-color: white;
	border-color: white;
}

.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
  background-color: #EFF0D1;
}

.links a{
  color:black;
  font-family: 'Special Elite', cursive;
} 

.navbar-default .navbar-toggle .icon-bar {
  color: black;
}

/*
*
* header styles
*
*/

.header-group {
  position: relative;
  margin-top: 49.5px;
}

.header-intro {
  position: absolute;
  left: 30%;
  top: 50%;
  transform: translate(-22%, -50%);
}

header h1, h2 {
  font-family: 'Raleway', sans-serif;
  color: white;
  font-weight: 400;
}

header h1 {
  font-size: 5vh;
}

header h2 {
  font-size: 3vh;
}

/*
*
* sections styles
*
*/

h2 {
  font-family: 'Raleway', sans-serif;
  font-weight: 400;
  font-size: 4vh;
}

h3 {
  font-family: 'Special Elite', cursive;
}

.section p, ul>li {
  font-family: 'Raleway', sans-serif;
}

.amenities-list {
  display: flex;
  justify-content: space-around;
}



.video {
  margin-bottom: 20px;
}
/*
*
* panel styles
*
*/

.panel {
  background-color: #B9A394;
  color: black;
  border-radius: 25px;
}

.form-control {
  width: 75%;
  height: 25px;
  display: text-center;
}

.panel h4 {
  font-size: 30px;
  font-family: 'Raleway', sans-serif;
}

.panel label {
  font-size: 15px;
  font-family: 'Raleway', sans-serif;
}

.form-control {
  width: 100%;
}

.submit-btn {
  background-color: #896978;
  color: white;
  border: none;
}

/*
*
* footer styles
*
*/

footer {
  font-size: 14px;
  color: #5D576B;
  background-color: #839791
}

.fa {
  padding: 5px;
  color: #5D576B;
}

footer p{
  color: #5D576B;
}

